--- a/server/vercel.json
+++ b/server/vercel.json
@@ -5,8 +5,8 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/"
+            "src": "/(.*)",
+            "dest": "server.js"
         }
     ]
 }
